// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Header Component with name and description 1`] = `
<div>
  <header
    class="text-right pr-20 py-10 text-white bg-gray-500/35 w-lvw"
  >
    <h1
      class="text-8xl"
    >
      test testerson
    </h1>
    <h2
      class="text-2xl"
    >
      test test test
    </h2>
  </header>
</div>
`;

exports[`renders Header Component with name and description and location 1`] = `
<div>
  <header
    class="text-right pr-20 py-10 text-white bg-gray-500/35 w-lvw"
  >
    <h1
      class="text-8xl"
    >
      test testerson
    </h1>
    <h2
      class="text-2xl"
    >
      test test test
    </h2>
    <h3
      class="text-lg"
      data-testid="location-h3"
    >
      Based in 
      Kissimme FL
    </h3>
  </header>
</div>
`;
